--- a/kingocommon/build.gradle
+++ b/kingocommon/build.gradle
@@ -10,6 +10,7 @@ android {
         minSdk rootProject.minSdk
         targetSdk rootProject.targetSdk
 
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -29,5 +30,8 @@ android {
 }
 
 dependencies {
-    api project(":kingobase")
+
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
 }
