--- a/kingobase/build.gradle
+++ b/kingobase/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     api 'androidx.core:core-ktx:1.7.0'
     api 'androidx.appcompat:appcompat:1.3.1'
     api 'com.google.android.material:material:1.4.0'
+    api 'com.kingja.loadsir:loadsir:1.3.8'
+    implementation 'com.airbnb.android:lottie:4.2.1'
 }
