--- a/kingowebview/build.gradle
+++ b/kingowebview/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation rootProject.googleAutoServiceDependency
     kapt rootProject.googleAutoServiceDependency
     implementation 'io.github.scwang90:refresh-layout-kernel:2.0.5'
+    implementation 'io.github.scwang90:refresh-header-classics:2.0.5'
 }
