--- a/kingowebview/build.gradle
+++ b/kingowebview/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     kapt rootProject.googleAutoServiceDependency
     implementation 'io.github.scwang90:refresh-layout-kernel:2.0.5'
     implementation 'io.github.scwang90:refresh-header-classics:2.0.5'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
