--- a/kingowebview/src/main/AndroidManifest.xml
+++ b/kingowebview/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lsy.kingowebview">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:usesCleartextTraffic="true">
+        <service android:name=".mainprocess.MainProcessCommandService" />
         <activity
             android:name=".KingoWebViewActivity"
             android:process=":kingoweb"
